--- a/pyproject-old.toml
+++ b/pyproject-old.toml
@@ -2,21 +2,16 @@
 name = "scriptwriting_flow"
 version = "0.1.0"
 description = "scriptwriting using crewAI"
-authors = [
-    { name = "Joao", email = "joao@prado.com" },
-]
+authors = [{ name = "Joao", email = "joao@prado.com" }]
 requires-python = ">=3.10,<=3.13"
 dependencies = [
-    "crewai[tools]>=0.86.0,<1.0.0",
+    "crewai[tools]>=0.86.0,<1.0.0"
 ]
 
 [project.scripts]
 kickoff = "scriptwriting_flow.main:kickoff"
 plot = "scriptwriting_flow.main:plot"
-run_crew = "scriptwriting_flow.main:run"
 
 [build-system]
-requires = [
-    "hatchling",
-]
+requires = ["hatchling"]
 build-backend = "hatchling.build"
